--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-quasar",
+  "name": "quasar-starter",
   "version": "0.0.1",
   "description": "A Quasar Framework app",
   "productName": "Quasar App",
