--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "coffeescript": "^2.4.1",
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
-    "quasar": "^1.0.0"
+    "quasar": "^1.0.0",
+    "vue-auto-routing": "^0.4.0"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0"
